# parser_demo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
inc/: parser_demo
inc/core/: basic_parser_conbinators.hpp  combinator.hpp  conbinator.hpp  parser.hpp
inc/utils/: algorithms.hpp  containers.hpp  iterator.hpp  option.hpp  type_traits.hpp
src/fmt/inc/: parser.hpp
src/fmt/test/: parser.cpp
src/utils/: option.cpp
test/core/: parser.cpp
test/utils/: algorithms.cpp  containers.cpp  option.cpp
